--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="../img/Copia de logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="../estilos.css">
+    <link rel="stylesheet" href="css/animate.css">
     <title>Santo Remedio</title>
 </head>
 <body>
@@ -87,6 +88,9 @@
     <a href="#" class="subir">
         <i class="fa-solid fa-angle-up"></i>
     </a>    
-
+    <script src="js/wow.min.js"></script>
+    <script>
+    new WOW().init();
+    </script>
 </body>
 </html>
